--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "sass": "^1.80.6"
   }
