--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.1.0",
+    "@chakra-ui/react": "^3.0.0",
+    "@chakra-ui/toast": "^7.0.2",
     "@emotion/react": "^11.13.3",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
