--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.0.0",
+    "@chakra-ui/react": "^3.1.2",
     "@chakra-ui/toast": "^7.0.2",
     "@emotion/react": "^11.13.3",
+    "@hookform/resolvers": "^3.9.1",
+    "bootstrap": "^5.3.3",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "sass": "^1.80.6"
+    "sass": "^1.80.6",
+    "zod": "^3.23.8"
   }
 }
